--- a/Andoku/assets/about-fr.html
+++ b/Andoku/assets/about-fr.html
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <html>
 <head>
 <title>À propos</title>
@@ -13,11 +13,10 @@
 
 <p>Copyright &#x00a9; 2009, 2010 Markus Wiederkehr.</p>
 
-<p>Ce programme vient SANS ABSOLUMENT AUCUNE GARANTIE. Ceci est un
-logiciel libre et vous êtes invité à le redistribuer suivant certaines
-conditions, visibles sur la page <a
-	href="http://www.gnu.org/licenses/gpl.html">GNU Licence Publique
-Générale v3</a> pour plus de détails.</p>
+<p>Ce logiciel n'offre ABSOLUMENT AUCUNE GARANTIES. C'est un
+logiciel libre que vous pouvez redistribuer sous certaines conditions,
+visibles sur la page<a href="http://www.gnu.org/licenses/gpl.html">GNU
+Licence Publique Générale v3</a> pour plus de détails.</p>
 
 <p>Page du projet : <a href="http://code.google.com/p/andoku">http://code.google.com/p/andoku</a></p>
 
