example 1, example 2, example 3...
git-svn-id: http://andoku.googlecode.com/svn/trunk@305 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/assets/help-de.html
+++ b/Andoku/assets/help-de.html
@@ -133,13 +133,13 @@ wie bei leerem Feld). Wenn jedoch einer der ausgewählten Werte bereits
 im Feld vorhanden ist, werden statt dessen die ausgewählten Werte im
 Feld gelöscht.</p>
 
-<p>Beispiel: Feldwert <tt>3</tt>, Ziffernblock <tt>5</tt>, <tt>7</tt>
+<p>Beispiel 1: Feldwert <tt>3</tt>, Ziffernblock <tt>5</tt>, <tt>7</tt>
 ergibt 3, 5 und 7.</p>
 
-<p>Beispiel: Feldwert <tt>3</tt>, <tt>5</tt>, <tt>7</tt>,
+<p>Beispiel 2: Feldwert <tt>3</tt>, <tt>5</tt>, <tt>7</tt>,
 Ziffernblock <tt>3</tt>, <tt>5</tt> ergibt 7.</p>
 
-<p>Beispiel: Feldwert <tt>3</tt>, <tt>5</tt>, Ziffernblock <tt>5</tt>,
+<p>Beispiel 3: Feldwert <tt>3</tt>, <tt>5</tt>, Ziffernblock <tt>5</tt>,
 <tt>8</tt> ergibt 3. D.h. 5 wird gelöscht, aber 8 wird <i>nicht</i>
 gesetzt.</p>
 
