--- a/Andoku/assets/help.html
+++ b/Andoku/assets/help.html
@@ -128,13 +128,13 @@ have been empty). If, on the other hand, the cell already contained one
 of the selected values then all of the selected values will be reset
 instead.</p>
 
-<p>Example: cell values <tt>3</tt>, numeric pad <tt>5</tt>, <tt>7</tt>
+<p>Example 1: cell values <tt>3</tt>, numeric pad <tt>5</tt>, <tt>7</tt>
 results in 3, 5 and 7.</p>
 
-<p>Example: cell values <tt>3</tt>, <tt>5</tt>, <tt>7</tt>, numeric
-pad <tt>3</tt>, <tt>5</tt> results in 7.</p>
+<p>Example 2: cell values <tt>3</tt>, <tt>5</tt>, <tt>7</tt>,
+numeric pad <tt>3</tt>, <tt>5</tt> results in 7.</p>
 
-<p>Example: cell values <tt>3</tt>, <tt>5</tt>, numeric pad <tt>5</tt>,
+<p>Example 3: cell values <tt>3</tt>, <tt>5</tt>, numeric pad <tt>5</tt>,
 <tt>8</tt> results in 3. I.e. 5 is cleared, but 8 is <i>not</i> set.</p>
 
 <p>The button <tt>C</tt> is used to clear all values on the numeric
