French localization graciously contributed by Guillaume Semichon.
git-svn-id: http://andoku.googlecode.com/svn/trunk@306 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/assets/help-fr.html
+++ b/Andoku/assets/help-fr.html
@@ -37,7 +37,7 @@ l'un des 9 blocs de 3x3 cellules.</p>
 
 <p>Andoku propose différentes variantes de jeu en plus du modèle
 classique. Dans le menu <i>Nouveau jeu</i>, vous pouvez choisir entre 2
-styles de grille et 4 styles de zones supplémentaires.</p>
+styles de grilles et 4 styles de zones supplémentaires.</p>
 
 <h2 id="grids">Types de grilles</h2>
 
@@ -91,7 +91,7 @@ grilles.</p>
 
 <h1 id="inputmethods">Méthodes de validation</h1>
 
-<p>Andoku propose trois différentes façon d'entrer un chiffre dans
+<p>Andoku propose trois différentes façons d'entrer un chiffre dans
 une cellule. Le choix se fait dans les paramètres.</p>
 
 <h2 id="im_ctv">Cellule - chiffre</h2>
@@ -121,14 +121,14 @@ cellule à remplir avec ce chiffre.</p>
 
 <p>Cette méthode peut être beaucoup plus rapide puisqu'il est
 possible de valider plusieurs cellules avec un seul chiffre, en
-sélectionnant plusieurs cellules à la suite.</p>
+sélectionnant simplement plusieurs cellules à la suite.</p>
 
 <p>Que se passe-t-il quand vous sélectionnez une cellule qui n'est
 pas vide ? Cela dépend si la cellule contient déjà l'un des chiffres
-sélectionnés ou pas. Si ce n'est pas le cas, les chiffres sont
-simplement ajoutés (comme quand la cellule est vide). Si la cellule
-contient l'un des chiffres sélectionnés, tous les chiffres sélectionnés
-seront effacés.</p>
+sélectionnés sur le pavé numérique ou pas. Si ce n'est pas le cas, les
+chiffres sont simplement ajoutés (comme quand la cellule est vide). Si
+la cellule contient déjà certains des chiffres sélectionnés sur le pavé
+numérique, tous ces chiffres seront effacés.</p>
 
 <p>Exemple 1 : si vous avez sélectionné <tt>5</tt> et <tt>7</tt> sur
 le pavé numérique et que vous sélectionnez ensuite une cellule qui
