Added a fourth example
git-svn-id: http://andoku.googlecode.com/svn/trunk@307 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/assets/help-de.html
+++ b/Andoku/assets/help-de.html
@@ -133,19 +133,25 @@ wie bei leerem Feld). Wenn jedoch einer der ausgewählten Werte bereits
 im Feld vorhanden ist, werden statt dessen die ausgewählten Werte im
 Feld gelöscht.</p>
 
-<p>Beispiel 1: Feldwert <tt>3</tt>, Ziffernblock <tt>5</tt>, <tt>7</tt>
-ergibt 3, 5 und 7.</p>
+<p>Beispiel 1: Feldwert ist <tt>3</tt>, Ziffernblock beinhaltet <tt>5</tt>
+und <tt>7</tt>, das ergibt 3, 5 und 7.</p>
 
-<p>Beispiel 2: Feldwert <tt>3</tt>, <tt>5</tt>, <tt>7</tt>,
-Ziffernblock <tt>3</tt>, <tt>5</tt> ergibt 7.</p>
+<p>Beispiel 2: Feldwerte sind <tt>3</tt>, <tt>5</tt> und <tt>7</tt>,
+am Ziffernblock sind <tt>3</tt> und <tt>5</tt>, das ergibt 7.</p>
 
-<p>Beispiel 3: Feldwert <tt>3</tt>, <tt>5</tt>, Ziffernblock <tt>5</tt>,
-<tt>8</tt> ergibt 3. D.h. 5 wird gelöscht, aber 8 wird <i>nicht</i>
-gesetzt.</p>
+<p>Beispiel 3: Feldwerte sind <tt>3</tt> und <tt>5</tt>, am
+Ziffernblock sind <tt>5</tt> und <tt>8</tt>, das ergibt 3. D.h. 5 wird
+gelöscht, aber 8 wird <i>nicht</i> gesetzt.</p>
 
 <p>Die Taste <tt>C</tt> dient dazu, aller Werte auf der Tastatur zu
 löschen. Mit der Taste <tt>Inv</tt> werden die ausgewählten Werte auf
 der Tastatur umgekehrt.</p>
+
+<p>Beispiel 4: Feldwerte sind <tt>3</tt>, <tt>5</tt> und <tt>7</tt>,
+angenommen, Sie glauben, dass der richtige Wert die 5 sein müsste. Eine
+einfache Möglichkeit alle Werte bis auf die 5 zu löschen, ist die
+Eingabe von <tt>5</tt> gefolgt von <tt>Inv</tt> und danach auf das Feld
+zu tippen.</p>
 
 <h2 id="im_auto">Automatisch</h2>
 
