--- a/Andoku/assets/help-fr.html
+++ b/Andoku/assets/help-fr.html
@@ -150,6 +150,12 @@ chiffre 8 ne sera pas inscrit.</p>
 sélectionnés sur le pavé numérique. Le bouton <tt>Inv</tt> sert à
 inverser la sélection des chiffres sur le pavé numérique.</p>
 
+<p>Exemple 4 : vous avez déjà les chiffres <tt>3</tt>, <tt>5</tt> et
+<tt>7</tt> dans une cellule et vous pensez que le chiffre correct est le
+5. Pour enlever de la cellule toutes les valeurs sauf le 5, sélectionnez
+simplement le numéro <tt>5</tt> sur le pavé numérique, pressez la touche
+<tt>Inv</tt> puis sélectionnez la cellule.</p>
+
 <h2 id="im_auto">Automatique</h2>
 
 <p>Choisissez cette méthode si vous voulez changer facilement de
