--- a/Andoku/assets/help.html
+++ b/Andoku/assets/help.html
@@ -128,18 +128,24 @@ have been empty). If, on the other hand, the cell already contained one
 of the selected values then all of the selected values will be reset
 instead.</p>
 
-<p>Example 1: cell values <tt>3</tt>, numeric pad <tt>5</tt>, <tt>7</tt>
-results in 3, 5 and 7.</p>
+<p>Example 1: cell value is <tt>3</tt>, numeric pad contains <tt>5</tt>
+and <tt>7</tt>, this results in 3, 5 and 7.</p>
 
-<p>Example 2: cell values <tt>3</tt>, <tt>5</tt>, <tt>7</tt>,
-numeric pad <tt>3</tt>, <tt>5</tt> results in 7.</p>
+<p>Example 2: cell values are <tt>3</tt>, <tt>5</tt> and <tt>7</tt>,
+numeric pad contains <tt>3</tt> and <tt>5</tt>, this results in 7.</p>
 
-<p>Example 3: cell values <tt>3</tt>, <tt>5</tt>, numeric pad <tt>5</tt>,
-<tt>8</tt> results in 3. I.e. 5 is cleared, but 8 is <i>not</i> set.</p>
+<p>Example 3: cell values are <tt>3</tt> and <tt>5</tt>, numeric pad
+contains <tt>5</tt> and <tt>8</tt>, this results in 3. I.e. 5 is
+cleared, but 8 is <i>not</i> set.</p>
 
 <p>The button <tt>C</tt> is used to clear all values on the numeric
 pad. The button <tt>Inv</tt> is used to reverse the values on the
 numeric pad.</p>
+
+<p>Example 4: cell values are <tt>3</tt>, <tt>5</tt> and <tt>7</tt>,
+suppose you think the correct value ought to be 5. An easy way to remove
+all values except 5 is to press <tt>5</tt> followed by <tt>Inv</tt> and
+then to tap on the cell.</p>
 
 <h2 id="im_auto">Automatic</h2>
 
