--- a/Andoku/assets/help-de.html
+++ b/Andoku/assets/help-de.html
@@ -11,7 +11,7 @@
 
 <ul>
 	<li><a href="#objective">Ziel des Spiels</a></li>
-	<li><a href="#variants">Spielvarianten</a></li>
+	<li><a href="#variations">Spielvarianten</a></li>
 	<ul>
 		<li><a href="#grids">Rasterarten</a></li>
 		<li><a href="#extras">Zusatzbereiche</a></li>
@@ -33,7 +33,7 @@ bis 9 zu befüllen, dass jede Ziffer exakt einmal in jedem <i>Bereich</i>
 vorkommt. Im Falle eines Standard-Sudokus ist ein <i>Bereich</i> dabei
 entweder eine Zeile, eine Spalte oder ein quadratischer 3x3-Block.</p>
 
-<h1 id="variants">Spielvarianten</h1>
+<h1 id="variations">Spielvarianten</h1>
 
 <p>Andoku bietet neben der klassischen Version zusätzliche
 Sudoku-Varianten an. Im Menü <i>Neues Spiel</i> können Sie aus zwei
