--- a/Andoku/assets/help-fr.html
+++ b/Andoku/assets/help-fr.html
@@ -11,7 +11,7 @@
 
 <ul>
 	<li><a href="#objective">Objectif</a></li>
-	<li><a href="#variants">Variantes</a></li>
+	<li><a href="#variations">Variantes</a></li>
 	<ul>
 		<li><a href="#grids">Types de grilles</a></li>
 		<li><a href="#extras">Zones supplémentaires</a></li>
@@ -33,7 +33,7 @@ que les chiffres de 1 à 9 soient présents une seule fois par <i>zone</i>.
 Dans un sudoku standard, une <i>zone</i> est un rang, une colonne ou
 l'un des 9 blocs de 3x3 cellules.</p>
 
-<h1 id="variants">Variantes</h1>
+<h1 id="variations">Variantes</h1>
 
 <p>Andoku propose différentes variantes de jeu en plus du modèle
 classique. Dans le menu <i>Nouveau jeu</i>, vous pouvez choisir entre 2
