--- a/Andoku/assets/help.html
+++ b/Andoku/assets/help.html
@@ -11,12 +11,12 @@
 
 <ul>
 	<li><a href="#objective">Objective</a></li>
-	<li><a href="#variants">Game Variants</a></li>
+	<li><a href="#variations">Game Variations</a></li>
 	<ul>
 		<li><a href="#grids">Grid Styles</a></li>
 		<li><a href="#extras">Extra Regions</a></li>
 	</ul>
-	<li><a href="#difficulties">Difficulty Levels</a></li>
+	<li><a href="#difficulties">Levels of Difficulty</a></li>
 	<li><a href="#inputmethods">Input Methods</a></li>
 	<ul>
 		<li><a href="#im_ctv">Cell Then Values</a></li>
@@ -33,9 +33,9 @@ the digits from 1 to 9 appear exactly once in each <i>region</i>. For a
 standard sudoku a <i>region</i> is either a row, a column or one of the
 nine square 3x3 blocks.</p>
 
-<h1 id="variants">Game Variants</h1>
+<h1 id="variations">Game Variations</h1>
 
-<p>Andoku offers additional sudoku variants besides the classical
+<p>Andoku offers additional sudoku variations besides the classical
 one. In the <i>New Game</i> menu you can choose from two grid styles and
 four kinds of extra regions.</p>
 
@@ -53,26 +53,27 @@ four kinds of extra regions.</p>
 
 <h2 id="extras">Extra Regions</h2>
 
-<p>Extra regions impose additional constraints on the puzzle. Aside
-from the classic version there are three kinds of extra regions:</p>
+<p>Extra regions impose additional constraints on the puzzle.
+Besides the classic version there are three kinds of extra regions:</p>
 <dl>
 	<dt>None</dt>
-	<dd>You only have to deal with nine rows, columns and (square or
-	squiggly) blocks.</dd>
+	<dd>You only have to deal with nine rows, nine columns and nine
+	blocks in either square or squiggly format.</dd>
 	<dt>X-Sudoku</dt>
 	<dd>The digits 1 to 9 also have to appear exactly once in the two
-	diagonals of the puzzle. To indicate this the diagonals have a light
-	blue background color.</dd>
+	diagonals of the puzzle. To indicate this the diagonals of the puzzle
+	are highlighted by a different color.</dd>
 	<dt>Hyper-Sudoku</dt>
-	<dd>The sudoku has four additional regions drawn in a light blue
-	background color. In addition to rows, columns and blocks the digits 1
-	to 9 have to appear exactly once in each of these extra regions.</dd>
+	<dd>This sudoku has four additional regions highlighted in a
+	different background color. In addition to rows, columns and blocks the
+	digits 1 to 9 have to appear exactly once in each of these extra
+	regions.</dd>
 	<dt>Percent-Sudoku</dt>
 	<dd>The sudoku has three additional regions that resemble a
 	percent sign.</dd>
 </dl>
 
-<h1 id="difficulties">Difficulty Levels</h1>
+<h1 id="difficulties">Levels of Difficulty</h1>
 
 <p>Andoku offers five difficulty levels per game type. The
 difficulties range from <i>Easy</i> to <i>Fiendish</i>. Squiggly sudokus
@@ -95,54 +96,53 @@ between the available input methods.</p>
 
 <p>With this input method you first select a cell by tapping on it
 with your finger and then you use the numeric pad at the bottom of the
-screen to enter one or more possible values for that cell. The currently
-selected cell will be highlighted with a background color.</p>
+screen to enter one or more possible values for that cell. The selected
+cell will be highlighted with a background color.</p>
 
-<p>Press the button <tt>C</tt> to clear the values of the currently
-selected cell.</p>
+<p>Press the button <tt>C</tt> to clear the values of the selected
+cell.</p>
 
-<p>The button <tt>Inv</tt> is used to reverse the values of the
-current cell. This makes it possible to easily specify that certain
-values are <i>not</i> possible at a certain cell. For example if you
+<p>The button <tt>Inv</tt> (Invert) is used to reverse the values of
+the current cell. This makes it possible to easily specify that certain
+values are <i>not</i> possible in a certain cell. For example if you
 enter <tt>3</tt>, <tt>7</tt>, <tt>Inv</tt> the result will be 1, 2, 4,
 5, 6, 8 and 9 (all digits except 3 and 7).</p>
 
-<p>If the device has a track ball it can be used move the selection
-to one of the neighbor fields.</p>
+<p>If the device has a trackball it can be used to move the
+selection to one of the neighbor fields.</p>
 
 <h2 id="im_vtc">Values Then Cell</h2>
 
-<p>This input method works the opposite way around. First you select
-one or more values from the numeric pad at the bottom of the screen.
-Only then do you tap on a cell to assign these values to it.</p>
+<p>This input method works in reverse. First select one or more
+values from the numeric pad at the bottom of the screen. Only then can
+you tap on a cell to assign these values.</p>
 
-<p>This input method can save a lot of work because it is possible
-to assign multiple fields to the same value or values by tapping on the
-cells one after the other.</p>
+<p>This input method can save a lot of time because it is possible
+to assign the same value or values to multiple cells by tapping on
+different cells one after the other.</p>
 
 <p>But what happens when you tap on a cell that is not empty? The
-result depends on whether the cell already contained one of the selected
-values or not. If the cell did not already contain one of the selected
-values the values are simply added (same behavior as if the cell would
-have been empty). If, on the other hand, the cell already contained one
-of the selected values then all of the selected values will be reset
-instead.</p>
+result depends on whether the cell already contains one of the selected
+values or not. If the cell does not already contain one of the selected
+values the values are simply added (same behavior as if the cell is
+empty). If, on the other hand, the cell already contains one of the
+selected values then all of the selected values will be reset.</p>
 
-<p>Example 1: cell value is <tt>3</tt>, numeric pad contains <tt>5</tt>
+<p>Example 1: if cell value is <tt>3</tt>, numeric pad contains <tt>5</tt>
 and <tt>7</tt>, this results in 3, 5 and 7.</p>
 
-<p>Example 2: cell values are <tt>3</tt>, <tt>5</tt> and <tt>7</tt>,
+<p>Example 2: if cell values are <tt>3</tt>, <tt>5</tt> and <tt>7</tt>,
 numeric pad contains <tt>3</tt> and <tt>5</tt>, this results in 7.</p>
 
-<p>Example 3: cell values are <tt>3</tt> and <tt>5</tt>, numeric pad
-contains <tt>5</tt> and <tt>8</tt>, this results in 3. I.e. 5 is
+<p>Example 3: if cell values are <tt>3</tt> and <tt>5</tt>, numeric
+pad contains <tt>5</tt> and <tt>8</tt>, this results in 3. I.e. 5 is
 cleared, but 8 is <i>not</i> set.</p>
 
 <p>The button <tt>C</tt> is used to clear all values on the numeric
 pad. The button <tt>Inv</tt> is used to reverse the values on the
 numeric pad.</p>
 
-<p>Example 4: cell values are <tt>3</tt>, <tt>5</tt> and <tt>7</tt>,
+<p>Example 4: if cell values are <tt>3</tt>, <tt>5</tt> and <tt>7</tt>,
 suppose you think the correct value ought to be 5. An easy way to remove
 all values except 5 is to press <tt>5</tt> followed by <tt>Inv</tt> and
 then to tap on the cell.</p>
