--- a/Andoku/assets/help.html
+++ b/Andoku/assets/help.html
@@ -75,15 +75,15 @@ Besides the classic version there are three kinds of extra regions:</p>
 
 <h1 id="difficulties">Levels of Difficulty</h1>
 
-<p>Andoku offers five difficulty levels per game type. The
+<p>Andoku offers five levels of difficulty per game type. The
 difficulties range from <i>Easy</i> to <i>Fiendish</i>. Squiggly sudokus
 or sudokus with extra regions are generally more difficult than standard
 sudokus.</p>
 
-<p>The difficulty levels <i>Hard</i> and <i>Fiendish</i> should
+<p>The levels of difficulty <i>Hard</i> and <i>Fiendish</i> should
 contain harder puzzles than what can be found in newspapers.</p>
 
-<p>With eight different game types, five difficulty levels and 100
+<p>With eight different game types, five levels of difficulty and 100
 puzzles per type and difficulty Andoku offers a total of 4000 puzzles.</p>
 
 <h1 id="inputmethods">Input Methods</h1>
