Added support for color sudokus
git-svn-id: http://andoku.googlecode.com/svn/trunk@317 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/assets/help-de.html
+++ b/Andoku/assets/help-de.html
@@ -37,7 +37,7 @@ entweder eine Zeile, eine Spalte oder ein quadratischer 3x3-Block.</p>
 
 <p>Andoku bietet neben der klassischen Version zusätzliche
 Sudoku-Varianten an. Im Menü <i>Neues Spiel</i> können Sie aus zwei
-Rasterarten und vier Arten von Zusatzbereichen wählen.</p>
+Rasterarten und fünf Arten von Zusatzbereichen wählen.</p>
 
 <h2 id="grids">Rasterarten</h2>
 
@@ -56,7 +56,7 @@ Rasterarten und vier Arten von Zusatzbereichen wählen.</p>
 
 <p>Durch Zusatzbereiche werden einem Sudoku-Rätsel zusätzliche
 Einschränkungen auferlegt. Zusätzlich zur klassischen Variante gibt es
-drei Arten von Zusatzbereichen:</p>
+vier Arten von Zusatzbereichen:</p>
 <dl>
 	<dt>Keine</dt>
 	<dd>Sie müssen lediglich die Grundregeln für die 9 Zeilen, Spalten
@@ -72,6 +72,11 @@ drei Arten von Zusatzbereichen:</p>
 	<dt>Prozent-Sudoku</dt>
 	<dd>Das Sudoku hat drei Zusatzbereiche, die einem Prozent-Zeichen
 	ähneln.</dd>
+	<dt>Farb-Sudoku</dt>
+	<dd>Dieses Sudoku hat neun Zusatzbereiche, die jeweils mit einer
+	eigenen Hintergrundfarbe gekennzeichnet sind. Insgesamt gibt es also
+	neun verschiedene Hintergrundfarben. Die Ziffern von 1 bis 9 müssen in
+	allen Feldern gleicher Hintergrundfarbe genau einmal vorkommen.</dd>
 </dl>
 
 <h1 id="difficulties">Schwierigkeitsgrade</h1>
@@ -85,8 +90,8 @@ schwieriger als Standard-Sudokus.</p>
 sollten schwierigere Sudoku-Rätsel beinhalten, als sie üblicherweise in
 Tageszeitungen abgedruckt sind.</p>
 
-<p>Mit acht verschiedenen Spielvarianten, fünf Schwierigkeitsgraden
-und jeweils 100 Rätseln hat Andoku in Summe 4000 verschiedene
+<p>Mit zehn verschiedenen Spielvarianten, fünf Schwierigkeitsgraden
+und jeweils 100 Rätseln hat Andoku in Summe 5000 verschiedene
 Sudoku-Rätsel.</p>
 
 <h1 id="inputmethods">Eingabemethoden</h1>
