--- a/Andoku/assets/help-fr.html
+++ b/Andoku/assets/help-fr.html
@@ -37,7 +37,7 @@ l'un des 9 blocs de 3x3 cellules.</p>
 
 <p>Andoku propose différentes variantes de jeu en plus du modèle
 classique. Dans le menu <i>Nouveau jeu</i>, vous pouvez choisir entre 2
-styles de grilles et 4 styles de zones supplémentaires.</p>
+styles de grilles et 5 styles de zones supplémentaires.</p>
 
 <h2 id="grids">Types de grilles</h2>
 
@@ -54,7 +54,7 @@ styles de grilles et 4 styles de zones supplémentaires.</p>
 <h2 id="extras">Zones supplémentaires</h2>
 
 <p>Les zones supplémentaires imposent des contraintes
-supplémentaires. En plus du modèle classique de grille, il y a trois
+supplémentaires. En plus du modèle classique de grille, il y a quatre
 sortes de zones supplémentaires disponibles :</p>
 <dl>
 	<dt>Standard</dt>
@@ -73,6 +73,11 @@ sortes de zones supplémentaires disponibles :</p>
 	<dd>La grille présente trois zones supplémentaires où ne peuvent
 	apparaitre qu'une fois les chiffres de 1 à 9, en plus des contraintes
 	classiques.</dd>
+	<dt>Sudoku-lor</dt>
+	<dd>Ce modèle de grille comporte 9 zones supplémentaires, chacune
+	différenciée par un fond de couleur particulier. Les chiffres de 1 à 9
+	ne doivent apparaître qu'une seule fois dans chacune de ces zones
+	colorée, en plus des contraintes classiques.</dd>
 </dl>
 
 <h1 id="difficulties">Niveaux de difficulté</h1>
@@ -85,8 +90,8 @@ zones supplémentaires sont plus difficiles que les grilles classiques.</p>
 grilles plus difficiles que celles que l'ont peut trouver dans les
 journaux et magazines.</p>
 
-<p>Avec huit différents types de jeu, cinq niveaux de difficulté et
-100 grilles par type et difficulté, Andoku propose un total de 4000
+<p>Avec dix différents types de jeu, cinq niveaux de difficulté et
+100 grilles par type et difficulté, Andoku propose un total de 5000
 grilles.</p>
 
 <h1 id="inputmethods">Méthodes de validation</h1>
