--- a/Andoku/assets/help.html
+++ b/Andoku/assets/help.html
@@ -37,7 +37,7 @@ nine square 3x3 blocks.</p>
 
 <p>Andoku offers additional sudoku variations besides the classical
 one. In the <i>New Game</i> menu you can choose from two grid styles and
-four kinds of extra regions.</p>
+five kinds of extra regions.</p>
 
 <h2 id="grids">Grid Styles</h2>
 
@@ -54,7 +54,7 @@ four kinds of extra regions.</p>
 <h2 id="extras">Extra Regions</h2>
 
 <p>Extra regions impose additional constraints on the puzzle.
-Besides the classic version there are three kinds of extra regions:</p>
+Besides the classic version there are four kinds of extra regions:</p>
 <dl>
 	<dt>None</dt>
 	<dd>You only have to deal with nine rows, nine columns and nine
@@ -71,6 +71,11 @@ Besides the classic version there are three kinds of extra regions:</p>
 	<dt>Percent-Sudoku</dt>
 	<dd>The sudoku has three additional regions that resemble a
 	percent sign.</dd>
+	<dt>Color-Sudoku</dt>
+	<dd>This sudoku has nine additional regions. Each one of these
+	regions is highlighted by a distinct color so there are nine different
+	background colors. The digits 1 to 9 have to appear exactly once in all
+	cells that have the same background color.</dd>
 </dl>
 
 <h1 id="difficulties">Levels of Difficulty</h1>
@@ -83,8 +88,8 @@ sudokus.</p>
 <p>The levels of difficulty <i>Hard</i> and <i>Fiendish</i> should
 contain harder puzzles than what can be found in newspapers.</p>
 
-<p>With eight different game types, five levels of difficulty and 100
-puzzles per type and difficulty Andoku offers a total of 4000 puzzles.</p>
+<p>With ten different game types, five levels of difficulty and 100
+puzzles per type and difficulty Andoku offers a total of 5000 puzzles.</p>
 
 <h1 id="inputmethods">Input Methods</h1>
 
