updated copyright year in about dialog
git-svn-id: http://andoku.googlecode.com/svn/trunk@404 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/assets/about-de.html
+++ b/Andoku/assets/about-de.html
@@ -11,7 +11,7 @@
 
 <p>Version 1.3.3</p>
 
-<p>Copyright &#x00a9; 2009, 2010 Markus Wiederkehr.</p>
+<p>Copyright &#x00a9; 2009, 2010, 2011 Markus Wiederkehr.</p>
 
 <p>Für dieses Programm besteht KEINERLEI GARANTIE. Dies ist freie
 Software, die Sie unter bestimmten Bedingungen weitergeben dürfen; für
