--- a/Andoku/assets/about-fr.html
+++ b/Andoku/assets/about-fr.html
@@ -11,7 +11,7 @@
 
 <p>version 1.3.3</p>
 
-<p>Copyright &#x00a9; 2009, 2010 Markus Wiederkehr.</p>
+<p>Copyright &#x00a9; 2009, 2010, 2011 Markus Wiederkehr.</p>
 
 <p>Ce logiciel n'offre ABSOLUMENT AUCUNE GARANTIES. C'est un
 logiciel libre que vous pouvez redistribuer sous certaines conditions,
