--- a/Andoku/assets/about-it.html
+++ b/Andoku/assets/about-it.html
@@ -11,7 +11,7 @@
 
 <p>version 1.3.3</p>
 
-<p>Copyright &#x00a9; 2009, 2010 Markus Wiederkehr.</p>
+<p>Copyright &#x00a9; 2009, 2010, 2011 Markus Wiederkehr.</p>
 
 <p>This program comes with ABSOLUTELY NO WARRANTY. This is free 
 software, and you are welcome to redistribute it under certain
