use original English for GPL legal info
git-svn-id: http://andoku.googlecode.com/svn/trunk@405 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/assets/about-fr.html
+++ b/Andoku/assets/about-fr.html
@@ -13,10 +13,10 @@
 
 <p>Copyright &#x00a9; 2009, 2010, 2011 Markus Wiederkehr.</p>
 
-<p>Ce logiciel n'offre ABSOLUMENT AUCUNE GARANTIES. C'est un
-logiciel libre que vous pouvez redistribuer sous certaines conditions,
-visibles sur la page<a href="http://www.gnu.org/licenses/gpl.html">GNU
-Licence Publique Générale v3</a> pour plus de détails.</p>
+<p>This program comes with ABSOLUTELY NO WARRANTY. This is free 
+software, and you are welcome to redistribute it under certain
+conditions; see the <a href="http://www.gnu.org/licenses/gpl.html">GNU
+General Public License v3</a> for details.</p>
 
 <p>Page du projet : <a href="http://code.google.com/p/andoku">http://code.google.com/p/andoku</a></p>
 
