--- a/Andoku/assets/about-de.html
+++ b/Andoku/assets/about-de.html
@@ -13,10 +13,10 @@
 
 <p>Copyright &#x00a9; 2009, 2010, 2011 Markus Wiederkehr.</p>
 
-<p>Für dieses Programm besteht KEINERLEI GARANTIE. Dies ist freie
-Software, die Sie unter bestimmten Bedingungen weitergeben dürfen; für
-Details siehe die <a href="http://www.gnu.org/licenses/gpl.html">GNU
-General Public License v3</a>.</p>
+<p>This program comes with ABSOLUTELY NO WARRANTY. This is free 
+software, and you are welcome to redistribute it under certain
+conditions; see the <a href="http://www.gnu.org/licenses/gpl.html">GNU
+General Public License v3</a> for details.</p>
 
 <p>Projekt-Homepage: <a href="http://code.google.com/p/andoku">http://code.google.com/p/andoku</a></p>
 
