Finnish translation contributed by Rami Selin.
git-svn-id: http://andoku.googlecode.com/svn/trunk@412 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/assets/help-fi.html
+++ b/Andoku/assets/help-fi.html
@@ -34,7 +34,7 @@ yhdestä yhdeksään (1-9) esiintyvät jokaisella <i>alueella</i>. Klassikkosudo
 
 <h1 id="variations">Pelimuodot</h1>
 
-<p>Andoku tarjoaa klassisen pelimuodon lisäksi erilasia vaihtoehtoja.
+<p>Andoku tarjoaa klassisen pelimuodon lisäksi erilaisia vaihtoehtoja.
 <i>Uusi peli</i> -valikossa voit valita kahdesta ruudukkotyylistä ja
 viidestä erikoisalueesta.</p>
 
@@ -45,7 +45,7 @@ viidestä erikoisalueesta.</p>
 	<dt>Normaali</dt>
 	<dd>Ruudukko koostuu 3x3-kuutioista.</dd>
 	<dt>Palapeli</dt>
-	<dd>Yhdeksän kuutomaisen alueen sijasta peliruudukko
+	<dd>Yhdeksän kuutiomaisen alueen sijasta peliruudukko
 	koostuu epäsäännöllisistä alueista. Alueet erottuvat paksulla
 	viivalla ja numeroiden yhdestä yhdeksään (1-9) tulee esiintyä
 	jokaisella alueella.</dd>
@@ -53,7 +53,7 @@ viidestä erikoisalueesta.</p>
 
 <h2 id="extras">Erikoisalueet</h2>
 
-<p>Erikoisalueet tuovat lisärajoituksia tehtäviin.
+<p>Erikoisalueet tuovat lisähaastetta tehtäviin.
 Klassikkosudokun rinnalta löytyy neljänlaisia erikoisalueita:</p>
 <dl>
 	<dt>Ei erikoisalueita</dt>
@@ -90,7 +90,7 @@ normaalit sudokut.</p>
 ovat sanomalehdistä löytyviä tehtäviä haastavampia.</p>
 
 <p>Kymmenellä erilaisella pelityypillä, viidellä vaikeustasolla ja
-sadalla tehtävällä per tyyppi ja vaikeus Andoku tarjoaa 5000 tehtävää.</p>
+sadalla tehtävällä per tyyppi ja vaikeustaso Andoku tarjoaa 5000 tehtävää.</p>
 
 <h1 id="inputmethods">Syöttötavat</h1>
 
@@ -118,16 +118,16 @@ siirtämään valintaa viereisiin alueisiin.</p>
 <h2 id="im_vtc">Arvot, sitten solu</h2>
 
 <p>Tämä tapa toimii päinvastaisesti. Ensin valitset yhden tai
-useamman arvon rudun alareunan numeronäppäimistöstä. Vasta
+useamman arvon ruudun alareunan numeronäppäimistöstä. Vasta
 sitten napsautat solua, johon arvot siirtyvät.</p>
 
 <p>Tämä tapa voi säästää paljon aikaa, koska saman arvon tai arvot
-voi syöttää useisiin soluihin napsauttamalla eri soluja toisen jälkeen.</p>
+voi syöttää useisiin soluihin napsauttamalla eri soluja peräkkäin.</p>
 
 <p>Mutta kuinka käy, kun napsautat solua, joka ei olekaan tyhjä?
 Lopputulos riippuu siitä, sisältääkö solu jo yhden valituista arvoista
 vai ei. Jos solu ei sisällä yhtä valituista arvoista, arvot yksinkertaisesti
-öistätään (aivan kuten tyhjään soluun). Toisessa tapauksessa solun sisältäessä
+lisätään (aivan kuten tyhjään soluun). Toisessa tapauksessa solun sisältäessä
 yhden valituista arvoista kaikki valitut arvot nollataan.</p>
 
 <p>Esimerkki 1: jos solun arvo on <tt>3</tt>, numeronäppäimistö sisältää <tt>5</tt>
@@ -139,11 +139,11 @@ numeronäppäimistö sisältää <tt>3</tt> ja <tt>5</tt>, tämä tuottaa lopput
 <p>Esimerkki 3: jos solun arvot ovat <tt>3</tt> ja <tt>5</tt>, numeronäppäimistö sisältää <tt>5</tt> ja <tt>8</tt>, tämä tuottaa lopputuloksena 3. Ts. 5 poistetaan,
 mutta 8 <i>ei</i> aseteta.</p>
 
-<p><tt>Kää</tt>-näppäimellä poistetaan kaikki numeronäppäimistön
+<p><tt>T</tt>-näppäimellä poistetaan kaikki numeronäppäimistön
 arvot. <tt>Kää</tt>-näppäimellä muutetaan numeronäppäimistön arvot
 käänteisiksi.</p>
 
-<p>Esimerkki 4: jos solun arvot ovat <tt>3</tt>, <tt>5</tt> ja <tt>7</tt>,
+<p>Esimerkki 4: jos solun arvot ovat <tt>3</tt>, <tt>5</tt> ja <tt>7</tt> ja
 oletetaan sinun ajattelevan oikean arvon olevan 5. Helppo tapa poistaa
 kaikki muut arvot paitsi 5 on painaa <tt>5</tt> ja sitten <tt>Kää</tt>
 ja lopuksi napsauttaa solua.</p>
@@ -154,7 +154,7 @@ ja lopuksi napsauttaa solua.</p>
 <i>Solu, sitten arvot</i> ja <i>Arvot, sitten solu</i> vaihtoehtojen
 välillä.</p>
 
-<p>Tämä tarkoitta, että molemmat syöttötavat ovat mahdollisia. Jos
+<p>Tämä tarkoittaa, että molemmat syöttötavat ovat mahdollisia. Jos
 napsautat ensin solua, niin <i>Solu, sitten arvot</i> otetaan käyttöön
 automaattisesti. Jos napsautat ensin numeronäppäimistöltä numeroa, niin
 <i>Arvot, sitten solu</i> otetaan käyttöön.</p>
